<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_layer_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.digitalanalogy.geoserverm.LayerDetailsActivity">

    <include layout="@layout/toolbar_main" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/layer_details_meta_header_tag"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:background="@color/colorDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="96dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/main_name_tag"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/details_txt_layer_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="96dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/main_title_tag"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/details_txt_layer_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="96dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/main_abstract_tag"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/details_txt_layer_abstract"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="96dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/layer_details_srs_tag"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/details_txt_layer_srs"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="128dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/layer_details_bbox_tag"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/layer_details_min_tag"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/layer_details_max_tag"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:background="@color/colorDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="128dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/layer_details_X_tag"
                            android:textSize="18sp" />

                        <View
                            android:layout_width="0.3dp"
                            android:layout_height="match_parent"
                            android:background="@color/colorDivider" />

                        <TextView
                            android:id="@+id/details_txt_bbox_min_x"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/details_txt_bbox_max_x"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="128dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/layer_details_Y_tag"
                            android:textSize="18sp" />

                        <View
                            android:layout_width="0.3dp"
                            android:layout_height="match_parent"
                            android:background="@color/colorDivider" />

                        <TextView
                            android:id="@+id/details_txt_bbox_min_y"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/details_txt_bbox_max_y"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:minHeight="48dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/layer_details_map_header_tag"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:background="@color/colorDivider" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/layer_details_map_info_tag"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/details_img_map"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/details_map_description" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:onClick="showRequestDialogue"
        android:src="@drawable/ic_map"
        app:fabSize="normal" />
</RelativeLayout>
