<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.digitalanalogy.geoserverm.MainActivity">

    <include layout="@layout/toolbar_main" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height">

        <TextView
            android:id="@+id/main_txt_nodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/main_no_data"
            android:textSize="20sp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/main_layout_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/main_service_tag"
                            android:textSize="24sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/colorDivider" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="96dp"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
                                android:text="@string/main_name_tag"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/main_txt_service_name"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:minHeight="48dp"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="96dp"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
                                android:text="@string/main_title_tag"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/main_txt_service_title"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:minHeight="48dp"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="96dp"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
                                android:text="@string/main_abstract_tag"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/main_txt_service_abstract"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:minHeight="48dp"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/main_map_capabilities_tag"
                            android:textSize="24sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/colorDivider" />

                        <TextView
                            android:id="@+id/main_txt_capabilities"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:textSize="18sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/main_map_format_tag"
                            android:textSize="24sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/colorDivider" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/main_map_format_header"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/main_txt_map_formats"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:textSize="18sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/main_exception_tag"
                            android:textSize="24sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/colorDivider" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/main_map_exception_header"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/main_txt_exception_formats"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:textSize="18sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/main_layer_tag"
                            android:textSize="24sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/colorDivider" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="128dp"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
                                android:text="@string/main_layer_count_tag"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/main_txt_layer_count"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/colorDivider" />

                        <Button
                            style="?attr/buttonBarButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:onClick="viewLayers"
                            android:text="@string/main_view_layers_tag" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:onClick="showConnectionDialogue"
            android:src="@drawable/ic_download"
            app:fabSize="normal" />
    </RelativeLayout>
</RelativeLayout>
